--- a/DATAVIEW/WebContent/workflowLibDir/config.properties
+++ b/DATAVIEW/WebContent/workflowLibDir/config.properties
@@ -1,5 +1,5 @@
-accessKey = XXXXXXXXX
-secretKey = XXXXXXXXXXXXXX
+accessKey = XXXXXXXXXXXXX
+secretKey = XXXXXXXXXXXXXXX
 groupName = dataview1
 keyName = Dataview_key
 imageID = ami-04dc96ad82b696bde
