--- a/DATAVIEW/WebContent/workflowLibDir/config.properties
+++ b/DATAVIEW/WebContent/workflowLibDir/config.properties
@@ -1,5 +1,5 @@
-accessKey = XXXXXXXXXXXXX
-secretKey = XXXXXXXXXXXXXXX
+accessKey = AKIAJDJBCUY2CKVG6DWA
+secretKey = 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
 groupName = dataview1
 keyName = Dataview_key
-imageID = ami-04dc96ad82b696bde
+imageID = ami-064ab7adf0e30b152
