change the logger for experiments

--- a/DATAVIEW/WebContent/workflowLibDir/config.properties
+++ b/DATAVIEW/WebContent/workflowLibDir/config.properties
@@ -1,5 +1,5 @@
-accessKey = XXXXXXXX
-secretKey = XXXXXXXXXXXXXXX
+accessKey = XXXXXX
+secretKey = XXXXXXXXXXXXXX
 groupName = dataview1
 keyName = Dataview_key
 imageID = ami-064ab7adf0e30b152
