--- a/DATAVIEW/WebContent/WEB-INF/web.xml
+++ b/DATAVIEW/WebContent/WEB-INF/web.xml
@@ -1,6 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://java.sun.com/xml/ns/javaee" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd" id="WebApp_ID" version="3.0">
   <display-name>dataview-cloud</display-name>
+  <security-constraint>
+      <web-resource-collection>
+	  <web-resource-name>DATAVIEW</web-resource-name>
+       <url-pattern>/*</url-pattern>
+      </web-resource-collection>
+      <user-data-constraint>
+        <transport-guarantee>CONFIDENTIAL</transport-guarantee>
+      </user-data-constraint>
+    </security-constraint>
   <servlet>
     <description>
 		</description>
