--- a/DATAVIEW/WebContent/workflowLibDir/config.properties
+++ b/DATAVIEW/WebContent/workflowLibDir/config.properties
@@ -1,5 +1,5 @@
-accessKey = XXXXXX
-secretKey = XXXXXXXXXXXXXX
+accessKey = XXXXXXX
+secretKey = XXXXXXXXXXXX
 groupName = dataview1
 keyName = Dataview_key
 imageID = ami-04c9b62e7f5101d60
