--- a/DATAVIEW/WebContent/workflowLibDir/config.properties
+++ b/DATAVIEW/WebContent/workflowLibDir/config.properties
@@ -1,5 +1,5 @@
-accessKey = AKIAUWK7UBFRNPM55ADJ
-secretKey = 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
+accessKey = 
+secretKey = 
 groupName = dataview1
 keyName = Dataview_key
-imageID = ami-09febedd1e0d958b4
+imageID = ami-0ce9880a78047d8ce
